add stuff to the presentation

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -46,6 +46,13 @@ span
 img
   @apply rounded-xl shadow-xl
 
+ol
+  list-style: decimal
+  padding: 30px
+
+ol li
+  @apply my-5
+
 // taken from w3schools
 ul
   list-style: none
